# abalone-age-predictor-api

./: Makefile  README.md  pyproject.toml
api/: app.py
models/: encoder.joblib  features  model.joblib  scaler.joblib
pipelines/: abalone_pipeline.py
schemas/: abalone_schemas.py
